@@ -2,4 +2,4 @@
 MODULE = arclite
 VER_MAJOR = 3
 VER_MINOR = 0
-VER_BUILD = 281
+VER_BUILD = 282
